--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>TITLE</title>
-  </head>
 
-  <body>
-    <canvas id="canvas" width="960" height="540"></canvas>
-    <script src="index.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>TITLE</title>
+</head>
+
+<body style="margin: 0px;">
+  <canvas id="canvas"></canvas>
+  <script src="index.js"></script>
+</body>
+
 </html>
