--- a/index.html
+++ b/index.html
@@ -6,10 +6,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>TITLE</title>
+  <link href="./styles.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 
-<body style="margin: 0px;">
+<body>
   <canvas id="canvas"></canvas>
+  <section id="parameter-config" class="dropup dropdown" aria-labelledby="config-dropdown-btn">
+    <button type="button" id="config-dropdown-btn" class="overlay-button btn btn-secondary dropdown-toggle"
+      data-toggle="dropdown" aria-haspopup="true">
+      Config
+    </button>
+    <div class="menu-offset dropdown-menu bg-dark text-light" aria-labelledby="config-dropdown-btn">
+      <div id="cfg-outer" class="inline-block"></div>
+      <div class="config-item">
+        <button id="share-btn" class="btn btn-info float-right">Share</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- Libraries -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script>
+
+  <!-- Config parsing -->
+  <script src="src/config_parser.js"></script>
+
+  <!-- Main -->
   <script src="index.js"></script>
 </body>
 
