--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
   <!-- Config parsing -->
   <script src="src/config_parser.js"></script>
 
+  <!-- Classes -->
+  <script src="src/mouse.js"></script>
+  <script src="src/vector.js"></script>
+
   <!-- Main -->
   <script src="index.js"></script>
 </body>
