Added a time analysis script

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
   <!-- Config parsing -->
   <script src="src/config_parser.js"></script>
 
+  <!-- Debugging Features -->
+  <script src="src/time_analysis.js" mode="debug"></script>
+
   <!-- Classes -->
   <script src="src/mouse.js"></script>
   <script src="src/vector.js"></script>
