Added a default debug level for the TimeAnalysis script tag which is used in its constructor

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <script src="src/config_parser.js"></script>
 
   <!-- Debugging Features -->
-  <script src="src/time_analysis.js" mode="debug"></script>
+  <script src="src/time_analysis.js" mode="debug" default-debug-level="10"></script>
 
   <!-- Classes -->
   <script src="src/mouse.js"></script>
