--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
       data-target="#config-modal" aria-haspopup="true">
       Config
     </button>
+    <button type="button" id="download-btn" class="overlay-button btn btn-success">Download</button>
     <div id="config-modal" class="modal fade" tabindex="-1">
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content bg-dark text-light">
           <div id="cfg-outer" class="modal-body">
           </div>
           <div class="modal-footer">
-            <div class="config-item">
-              <button id="share-btn" class="btn btn-info float-right">Share</button>
+            <div class="config-item d-flex justify-content-between">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button id="share-btn" class="btn btn-info">Share</button>
             </div>
           </div>
         </div>
@@ -46,8 +47,8 @@
     crossorigin="anonymous"></script>
 
   <!-- Config parsing -->
-  <script src="src/config_collection.js"></script>
-  <script src="src/config_parser.js"></script>
+  <script src="src/configParser/collection.js"></script>
+  <script src="src/configParser/parser.js"></script>
 
   <!-- Debugging Features -->
   <script src="src/time_analysis.js" mode="debug"></script>
