Extracted boilerplate into init.js and made canvas styling better

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <canvas id="canvas"></canvas>
+  <canvas></canvas>
   <section id="parameter-config" class="dropup dropdown" aria-labelledby="config-dropdown-btn">
     <div class="overlay-btns">
       <button type="button" id="config-dropdown-btn" class="btn btn-secondary" data-toggle="modal"
@@ -60,6 +60,7 @@
   <script src="src/vector.js"></script>
 
   <!-- Main -->
+  <script src="init.js" drawfunc="draw" drawonresize="true"></script>
   <script src="index.js"></script>
 </body>
 
