Rearranged the buttons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 <body>
   <canvas></canvas>
+  <div id="credit">
+    <a href="https://eniallator.com"><span>Created by eniallator</span></a>
+  </div>
   <section id="parameter-config" class="dropup dropdown" aria-labelledby="config-dropdown-btn">
     <div class="overlay-btns">
       <button type="button" id="config-dropdown-btn" class="btn btn-secondary" data-toggle="modal"
