Removed the script configs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <canvas></canvas>
   <div id="credit">
-    <a href="https://eniallator.com"><span>Created by eniallator</span></a>
+    <a href="https://eniallator.com" target="_blank"><span>Created by eniallator</span></a>
   </div>
   <section id="parameter-config" class="dropup dropdown" aria-labelledby="config-dropdown-btn">
     <div class="overlay-btns">
@@ -63,7 +63,7 @@
   <script src="src/vector.js"></script>
 
   <!-- Main -->
-  <script src="init.js" drawfunc="draw" drawonresize="true"></script>
+  <script src="init.js"></script>
   <script src="index.js"></script>
 </body>
 
