--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     <div id="config-modal" class="modal fade" tabindex="-1">
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content bg-dark text-light">
-          <div id="cfg-outer" class="modal-body">
-          </div>
+          <div id="cfg-outer" class="modal-body"></div>
           <div class="modal-footer">
             <div class="config-item d-flex justify-content-between">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
