Added more dev functionality

--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
   <script src="src/time_analysis.js" mode="debug"></script>
 
   <!-- Classes -->
-  <script src="src/mouse.js"></script>
+  <script src="src/monad.js"></script>
   <script src="src/vector.js"></script>
+  <script src="src/mouse.js"></script>
 
   <!-- Main -->
   <script src="init.js"></script>
