--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Niall's web animation template" />
+  <meta name="description"
+    content="Made using Niall's web animation template - https://github.com/eniallator/Web-Animation-Template/" />
   <meta name="theme-color" content="#343a40" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>TITLE</title>
@@ -38,7 +39,7 @@
     </div>
     <dialog id="config-modal">
       <form>
-        <h1>Web Animation Template</h1>
+        <h1>Settings</h1>
         <section id="cfg-outer">
         </section>
         <div class="dialog-actions">
