Added some spell check ignores

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     </section>
   </main>
   <section id="parameter-config" role="dialog" aria-label="Parameter configuration menu">
-    <div class="overlay-btns">
+    <div class="overlay-buttons">
       <button id="config-dropdown-btn" class="secondary" title="Config">
         <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
           <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
