Added more Vector methods. Remade the app index methods to use a getValue/onChange combo for state. Made eslint rules stricter

--- a/packages/app/public/index.html
+++ b/packages/app/public/index.html
@@ -53,7 +53,7 @@
       <dialog id="config-modal">
         <form>
           <h1>Settings</h1>
-          <section id="cfg-outer"></section>
+          <fieldset id="cfg-outer"></fieldset>
           <div class="dialog-actions">
             <button class="secondary" formmethod="dialog">
               <span class="width-large">Close</span>
