--- a/packages/app/public/index.html
+++ b/packages/app/public/index.html
@@ -8,6 +8,8 @@
   <meta name="theme-color" content="#343a40" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>TITLE</title>
+  <link rel="preload" href="bundle.js" as="script" />
+  <link rel="preload" href="./styles.css" as="style" />
   <link href="./styles.css" rel="stylesheet" />
 </head>
 
